# LinkedIn-post-generator

./: .gitignore  pyproject.toml  requirements.txt
app/core/: config.py  linkedin.py
